Update Blog “2021-04-06-401k-ira-wtf-2”

--- a/src/pages/blog/2021-04-06-401k-ira-wtf-2.md
+++ b/src/pages/blog/2021-04-06-401k-ira-wtf-2.md
@@ -1,6 +1,6 @@
 ---
 templateKey: blog-post
-title: 401k, IRA, WTF 2
+title: "401k, IRA, WTF "
 date: 2021-03-15T14:00:00.000Z
 description: What the heck is an IRA or 401k? Retirement accounts, IRAs, and
   401ks, explained.
