Update Blog “2021-04-06-401k-ira-wtf-2”

--- a/src/pages/blog/2021-04-06-401k-ira-wtf-2.md
+++ b/src/pages/blog/2021-04-06-401k-ira-wtf-2.md
@@ -11,6 +11,8 @@ tags:
   - 401k
   - IRA
 ---
+📷: Pinterest 
+
 The financial industry isn’t hard, it was set up to be hard. And one thing that is unnecessarily hard are the names of financial things.
 
 Sometimes it feels like a group of kids woke up one day and said, you know what we should do? We should create code names for all of these cool investments that can help you save more money, so nobody else can play this game with us. Well, no more of that.
@@ -47,13 +49,13 @@ No, seriously. Let’s talk numbers for a second. If you start to invest $3K per
 
 Yes, you read that right. And thats with $300 a month for a year. Magic!
 
-P.S. Access to this calculator is available in [our handy app](www.penny-finance.com). 
+P.S. Access to this calculator is available in [our handy app](penny-finance.com). 
 
 When you set up one (or more) of these retirement accounts, it means you can keep even more of your money for future you to enjoy. Win, win, win.
 
 Are your eyes glazing over? We know... it is impossible to teach this via a blog. That's why we built Penny Finance. Our app shows you how, instead. Because, how can you actually apply this info to your ever-changing life? 
 
-### [Phew, Show me how plz ](www.penny-finance.com/quiz)
+### [Phew, Show me how plz ](penny-finance.com/quiz)
 
 If you are into this and can learn this way, keep reading!!! 
 
@@ -116,4 +118,4 @@ There’s no one-size-fits-all recommendation to finances. And there shouldn’t
 
 That is why we made Penny. Our intelligent calculators will determine the best option for you, with you, powered by you. 
 
-##### [Start investing in yourself today. ](www.penny-finance.com)
+[Start investing in yourself today. ](penny-finance.com/products)
