Update Blog “2021-04-06-401k-ira-wtf-2”

--- a/src/pages/blog/2021-04-06-401k-ira-wtf-2.md
+++ b/src/pages/blog/2021-04-06-401k-ira-wtf-2.md
@@ -11,6 +11,10 @@ tags:
   - 401k
   - IRA
 ---
+What the heck is an IRA or 401k? Retirement accounts, IRAs, and 401ks, explained.
+
+![](/img/f8c805a12ffcc6f26ddd0301a01f7134-1.jpg)
+
 📷: Pinterest 
 
 The financial industry isn’t hard, it was set up to be hard. And one thing that is unnecessarily hard are the names of financial things.
