Update Blog “2021-04-06-401k-ira-wtf-2”

--- a/src/pages/blog/2021-04-06-401k-ira-wtf-2.md
+++ b/src/pages/blog/2021-04-06-401k-ira-wtf-2.md
@@ -90,7 +90,7 @@ The biggest benefit for the 401k compared to IRAs? More money, more savings.
 
 You have a much higher contribution margin: you can deposit up to $19,500 per year in a 401k. More money invested means extra money for you to enjoy in the future.
 
-* Your employer may top-up your contributions AKA match (double the money = more money in your pocket)
+* Your [employer may top-up your contributions](https://www.loom.com/share/089282c8ad6e4dd686679b3a3ece8982) AKA match (double the money = more money in your pocket)
 * You have a higher contribution limit (more money invested = more money in your pocket)
 * You pay less taxes today (you guessed it – more money in your pocket)
 
@@ -112,7 +112,7 @@ Money tip: If your account statement just says your name on it, like “Jane Smi
 
 # What if I don’t have an account, which type of retirement account is best for me?
 
-If your employer offers a plan, start there. They can help set up a 401k or similar account 4 you, and even match your contributions.
+If your employer offers a plan, start there. They can help set up a 401k or similar account 4 you, and [even match your contributions](https://www.loom.com/share/089282c8ad6e4dd686679b3a3ece8982).
 
 If your employer doesn’t offer a plan, you have 2 options: a traditional IRA or a Roth IRA. Generally speaking, you can’t go wrong with either. If you are 20 to 30 years old, a Roth IRA will most likely have the greatest financial benefit.
 
