--- a/src/pages/blog/2021-04-06-401k-ira-wtf-2.md
+++ b/src/pages/blog/2021-04-06-401k-ira-wtf-2.md
@@ -114,7 +114,7 @@ Money tip: If your account statement just says your name on it, like “Jane Smi
 
 If your employer offers a plan, start there. They can help set up a 401k or similar account 4 you, and even match your contributions.
 
-> Time for a video break ya?We walk through a 401k to figure out the match: https://www.loom.com/share/089282c8ad6e4dd686679b3a3ece8982  
+> Time for a video break ya? [We walk through a 401k](https://www.loom.com/share/7c15376795864215b12a64558b84584e) to find the perks!  
 
 If your employer doesn’t offer a plan, you have 2 options: a traditional IRA or a Roth IRA. Generally speaking, you can’t go wrong with either. If you are 20 to 30 years old, a Roth IRA will most likely have the greatest financial benefit.
 
