Update Blog “2021-04-06-401k-ira-wtf-2”

--- a/src/pages/blog/2021-04-06-401k-ira-wtf-2.md
+++ b/src/pages/blog/2021-04-06-401k-ira-wtf-2.md
@@ -53,13 +53,13 @@ No, seriously. Let’s talk numbers for a second. If you start to invest $3K per
 
 Yes, you read that right. And thats with $300 a month for a year. Magic!
 
-P.S. Access to this calculator is available in [our handy app](penny-finance.com). 
+P.S. Access to this calculator is available in [our handy app](https://www.penny-finance.com). 
 
 When you set up one (or more) of these retirement accounts, it means you can keep even more of your money for future you to enjoy. Win, win, win.
 
 Are your eyes glazing over? We know... it is impossible to teach this via a blog. That's why we built Penny Finance. Our app shows you how, instead. Because, how can you actually apply this info to your ever-changing life? 
 
-### [Phew, Show me how plz ](penny-finance.com/quiz)
+### [Phew, Show me how plz ](https://penny-finance.com/quiz)
 
 If you are into this and can learn this way, keep reading!!! 
 
@@ -124,4 +124,4 @@ There’s no one-size-fits-all recommendation to finances. And there shouldn’t
 
 That is why we made Penny. Our intelligent calculators will determine the best option for you, with you, powered by you. 
 
-[Start investing in yourself today. ](penny-finance.com/products)
+[Start investing in yourself today. ](https://penny-finance.com/products)
